全体を調整

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -41,6 +41,10 @@
     border-color: #c4c7bf
     box-shadow: rgba(black, .1) 0 1px 2px inset
 
+textarea.a-sm-text-input
+  min-height: 6rem
+  overflow: hidden
+
 .a-sm-label
   +text-block(.8125rem 1.45 .5rem, block 600)
   &.is-required
