--- a/app/assets/stylesheets/blocks/shared/_to-top.sass
+++ b/app/assets/stylesheets/blocks/shared/_to-top.sass
@@ -11,7 +11,7 @@
   transition: color .2s ease-in, background-color .2s ease-in
   opacity: 0
   transition: opacity .2s ease-in
-  +media-breakpoint-down(sm)
+  +media-breakpoint-down(md)
     right: 1rem
   &:hover
     background-color: rgba(black, .2)
