--- a/app/views/home/_eligibility.slim
+++ b/app/views/home/_eligibility.slim
@@ -1,7 +1,7 @@
 section.welcome-section#eligibility
   .container
     h2.welcome-section__title
-      | 誰が参加できる？
+      | 参加資格
     = render "unlimited"
     = render "conditions"
     = render "cases"
