--- a/app/views/home/_process.slim
+++ b/app/views/home/_process.slim
@@ -4,7 +4,7 @@ section.welcome-section#process
       | 申し込みから就職までの流れ
     .welcome-small-sections
       .row.is-gutter-width-32
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
@@ -16,7 +16,7 @@ section.welcome-section#process
                   .welcome-small-section__description
                     p
                       | まずはこのページをよく読み、ページの一番下にある申し込みフォームから申し込んでください。
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
@@ -28,7 +28,7 @@ section.welcome-section#process
                   .welcome-small-section__description
                     p
                       | 申込後、面接の日時を決め面接を行います。申し込んだ方の現在の状況、将来の目標、プログラマーとして就職したい動機などをヒヤリングします。面接はオンラインビデオチャットで行いますので、弊社にお越しいただく必要はありません。
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
@@ -40,7 +40,7 @@ section.welcome-section#process
                   .welcome-small-section__description
                     p
                       | Fjord Boot Camp の参加が決まったら早速学習を開始していただきます。この時点でミートアップ、忘年会の参加、弊社オフィスの利用も可能になります。
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
@@ -52,7 +52,7 @@ section.welcome-section#process
                   .welcome-small-section__description
                     p
                       | 学習を進めると、最後の課題に「自分で考えたWebサービスを作る」、というものがあります。これをクリアしますと、Fjord Boot Camp の学習は終了になります。ここで作った成果物を自分のスキルを証明するものの一つとして、これを持って就職活動を開始します。
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
@@ -64,7 +64,7 @@ section.welcome-section#process
                   .welcome-small-section__description
                     p
                       | 就職したい会社の条件などをヒヤリングし、希望に合った会社を提案します。また、逆にその会社にもヒヤリングして、その会社に入るためにさらに勉強しておいたほうがいいことなどのアドバイスをします。
-        .col-sm-12.col-md-12
+        .col-xs-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
