--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -1,7 +1,7 @@
 section.welcome-section#tutorials
   .container
     h2.welcome-section__title
-      | 何を学ぶの？
+      | 学習内容
     section.welcome-child-section.is-tutorials
       .welcome-child-section__description.is-lead-text
         p.is-text-align-center-md-up
