--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -11,6 +11,7 @@
   = render('finding_employment')
   = render('administrator')
   = render('other')
+  = render('faq')
   = render('form')
 footer.footer
   .container
