--- a/app/assets/stylesheets/blocks/welcome/_welcome.sass
+++ b/app/assets/stylesheets/blocks/welcome/_welcome.sass
@@ -1,5 +1,10 @@
 body.home-welcome
   color: $welcome-default-text
+  +media-breakpoint-down(sm)
+    .row
+      +margin(horizontal, 0)
+      [class*=col-xs-12]
+        +padding(horizontal, 0)
 
 .welcome-container
   max-width: 60rem
@@ -25,7 +30,7 @@ body.home-welcome
 .welcome-section__title
   +text-block(1.75rem 1.45 .8em, 400 center $welcome-main-color)
   +media-breakpoint-down(sm)
-    +text-block(1.25rem 1.3 1rem)
+    +text-block(1.125rem 1.3 1rem)
     +position(relative)
 
 .welcome-child-section__title
@@ -42,3 +47,7 @@ body.home-welcome
       font-size: .875rem
   *:last-child
     margin-bottom: 0
+
+.welcome-section__faqs
+  max-width: 40rem
+  +margin(horizontal, auto)
