--- a/app/views/home/_conditions.slim
+++ b/app/views/home/_conditions.slim
@@ -57,7 +57,7 @@ section.welcome-child-section
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
-            = image_tag('money.svg', class: 'welcome-small-section__icon')
+            = image_tag('book.svg', class: 'welcome-small-section__icon')
             h3.welcome-small-section__title
               | 多少の教材費を<br>用意できる
             .welcome-small-section__description
