--- a/app/views/home/_other.slim
+++ b/app/views/home/_other.slim
@@ -1,16 +1,14 @@
 section.welcome-section#other
   .container
     h2.welcome-section__title
-      | 他に何か
-      br.is-hidden-md-up
-      | いいことってある？
+      | 参加特典
     section.welcome-child-section
       .welcome-child-section__description
         p
-          | いいことって言うほどでもないかもしれないですが、年に一回の忘年会と、月に一回の納会に参加できます。また、空いていればオフィスも自由に使えます。
+          | 特典って言うほどでもないかもしれないですが、年に一回の忘年会と、月に一回のミートアップに参加できます。また、空いていればオフィスも自由に使えます。
       .welcome-small-sections
         .row.is-gutter-width-32
-          .col-sm-12.col-md-4
+          .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 h3.welcome-small-section__title
@@ -19,17 +17,17 @@ section.welcome-section#other
                   p= image_tag('party.jpg')
                   p
                     | 毎年、忘年会と呼ぶには時期が早いのですが、11月の第一木曜日に新宿近辺の居酒屋で忘年会を行います。忘年会にはたくさんの卒業した方も集まります。飲食代は僕らが負担します。
-          .col-sm-12.col-md-4
+          .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 h3.welcome-small-section__title
-                  | MeetUp
+                  | ミートアップ
                 .welcome-small-section__description
                   p= image_tag('nokai.jpg')
                   p
                     | 毎月第一木曜日に弊社のオフィスでミートアップを行います。卒業した方も交えてピザを食べながら就職の相談や、プログラムの相談などがこの会でできます。
                     | ビデオチャットを繋いでいるので、オンラインで参加をすることもできます。遅れて参加、途中退出は自由です。
-          .col-sm-12.col-md-4
+          .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 h3.welcome-small-section__title
