metaタグを変更

--- a/app/views/static_pages/thanks.html.slim
+++ b/app/views/static_pages/thanks.html.slim
@@ -1,3 +1,4 @@
+- content_for(:page_classes, 'no-header no-recent-reports no-global-nav')
 .thanks
   = link_to root_path, class: "" do
     = image_tag('logo-colored.svg', class: 'thanks__logo-image')
