256internsの文言をFjord Bootcampに変更

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,7 +5,7 @@ html.is-admin lang="ja"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta content="width=device-width, initial-scale=1" name="viewport"
     - page_title = yield :title
-    title #{page_title.present? ? page_title + ' - ' : ''}#{t('256interns')}
+    title #{page_title.present? ? page_title + ' - ' : ''}Fjord Bootcamp
     = favicon_link_tag
     = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
     = stylesheet_link_tag 'application', media: 'all'
