--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -2,7 +2,7 @@ header.header
   .container.has-no-right-padding
     .header__container
       = link_to root_path, class: 'header__title' do
-        = image_tag('header-logo.svg', alt: "#{t('256interns')}", class: "header__logo")
+        h1 FJORD BOOTCAMP
         - if current_user.graduation
           .user-part.is-header(class="is-graduate")
             = t("graduate")
