--- a/app/views/practices/_temp_questions.slim
+++ b/app/views/practices/_temp_questions.slim
@@ -3,10 +3,10 @@
     | このチュートリアルに関する質問
   .user-reports__items
     .user-reports-item.is-mine
-      a.user-reports-item__link.has-user-icon href="/reports/4" itempro="url" 
+      a.user-reports-item__link.has-user-icon href="/reports/4" itempro="url"
         img.user-reports-item__user-icon alt="" height="88" src="http://gravatar.com/avatar/ca8b183e3e8cf320dbd76b241bbd6eba.jpg?s=88" width="88"
-        h3.user-reports-item__title itemprop="name" 
-          | 256interns で Bootstrap のバージョン更新
+        h3.user-reports-item__title itemprop="name"
+          | Fjord Bootcamp で Bootstrap のバージョン更新
         time.user-reports-item__updated-at datetime="2016-11-14T16:53:38+09:00" pubdate="pubdate"
           | 2016年11月14(水) 16:53
         .user-reports-item__comment-count
@@ -17,10 +17,10 @@
       .user-reports-item-actions
         ul.user-reports-item-actions__items
           li.user-reports-item-actions__item
-            a.user-reports-item-actions__item-link href="/reports/4/edit" 
+            a.user-reports-item-actions__item-link href="/reports/4/edit"
               i.fa.fa-pencil
           li.user-reports-item-actions__item
-            a.user-reports-item-actions__item-link data-confirm="本当によろしいですか？" data-method="delete" href="/reports/4" rel="nofollow" 
+            a.user-reports-item-actions__item-link data-confirm="本当によろしいですか？" data-method="delete" href="/reports/4" rel="nofollow"
               i.fa.fa-trash-o
 
   .page-actions
