--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -22,7 +22,7 @@ header.page-header
                 .categories-item__show-handle.js-show-handle__trigger
                   i.fa.fa-cog
             .categories-item__description.js-markdown-view.js-target-blank.is-long-text-style
-              = category.description.html_safe
+              = category.description
             .categories-item__body
               .category-practices.js-category-practices
                 = render category.practices
