--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -24,7 +24,7 @@
               = link_to practice, class: 'report-practices__item-link' do
                 = practice.title
     .report__description.js-target-blank.is-long-text-style.js-markdown-view
-      = report.description.html_safe
+      = report.description
     footer.report__body-footer
       .report__body-footer-container
         - if @report.user_id == current_user.id
