--- a/app/views/reports/_report_comment.slim
+++ b/app/views/reports/_report_comment.slim
@@ -10,7 +10,7 @@
       time.report-comment__created-at(datetime='#{report.created_at.to_datetime}' pubdate='pubdate')
         = l comment.updated_at, format: :date_long_with_time
     .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style
-      = comment.description.html_safe
+      = comment.description
     - if comment.user == current_user
       .report-comment__actions
         ul.report-comment__actions-items
