--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -10,7 +10,8 @@ body
   overflow-y: scroll
   .modal-open
     overflow: hidden
-  &.home-welcome
+  &.home-welcome,
+  &.home-index
     background-color: $base-color
   &.has-background
     background-image: image_url('main-visual.jpg')
@@ -39,7 +40,8 @@ body
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
 
-.home-welcome
+.home-welcome,
+.home-index
   .container
     max-width: 75rem
     +padding(horizontal, 1rem)
