リンクの修正

--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -88,4 +88,6 @@ section.welcome-section#administrator
               td 50万円
             tr
               th URL
-              td = link_to "http://fjord.jp"
+              td
+                = link_to "http://fjord.jp", target: "_blank" do
+                  | fjord.jp
