--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,8 +19,11 @@ html.is-application lang="ja"
     .wrapper.js-open-drawer-wrapper
       - if current_user && page_classes.exclude?("no-header")
         = render "header"
-        = render "faces"
-      = render "alert"
+        = render "alert"
+        - if request.from_pc?
+          = render "faces"
+      - else
+        = render "alert"
       main.page
         = yield
     - if current_user && page_classes.exclude?("no-recent-reports") && recent_reports.present?
