--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -12,10 +12,10 @@ $header-height: 3.125rem
   align-items: center
   height: $header-height
 
-.header__logo
-  height: 1.5rem
+.header__title-image
+  height: 2rem
   +media-breakpoint-down(sm)
-    height: 1.25rem
+    height: 1.5rem
 
 .header-links
   height: 100%
