--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -1,8 +1,8 @@
 header.header
   .container.has-no-right-padding
     .header__container
-      = link_to root_path, class: 'header__title' do
-        h1 FJORD BOOTCAMP
+      = link_to root_path, class: "header__title" do
+        = image_tag("logo.svg", class: "header__title-image")
         - if current_user.graduation
           .user-part.is-header(class="is-graduate")
             = t("graduate")
@@ -12,9 +12,9 @@ header.header
       .header-links.is-user-links
         ul.header-links__items
           li
-            = form_tag reports_url, method: 'get', class: 'header-search' do
-              = text_field_tag 'word', params[:word], class: 'a-xs-text-input header-search__text-input', placeholder: t('search_report')
-              button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
+            = form_tag reports_url, method: "get", class: "header-search" do
+              = text_field_tag "word", params[:word], class: "a-xs-text-input header-search__text-input", placeholder: t("search_report")
+              button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= "submit")
                 i.fa.fa-search
           li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger
@@ -24,7 +24,7 @@ header.header
                     = current_user.notifications.unreads.count
                 i.fa.fa-bell-o
             - if current_user.notifications.unreads.exists?
-              = render 'application/notifications'
+              = render "application/notifications"
           li.header-links__item
             = link_to edit_user_path(current_user), class: "header-links__link" do
               i.fa.fa-cog
@@ -40,6 +40,6 @@ header.header
                   = current_user.notifications.unreads.count
               i.fa.fa-bell-o
           - if current_user.notifications.unreads.exists?
-            = render 'application/notifications'
+            = render "application/notifications"
         .header-show-mobile-nav.js-show-mobile-nav
           i.fa.fa-bars
